<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheFoodTree</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Some helpers -->
    <string name="emptyString">Log ingredients</string>
    
    <!-- Titles -->
    <string name="log_ingredients_title">Log ingredients</string>
    <string name="log_menu_item_title">Log from menu</string>
    <string name="daily_report_title">Daily report</string>
    
    
    <!-- Food Categories -->
    <string name="veg_title">Vegetables</string>
    <string name="bread_and_pasta_title">Bread &amp; Pasta</string>
    <string name="dairy_title">Dairy</string>
    <string name="fruit_title">Fruit</string>
    <string name="cheese_title">Cheese</string>
    <string name="herbs_and_condiments_title">Herbs &amp; Condiments</string>
    <string name="meat_title">Meat</string>
    <string name="fish_title">Fish</string>    
    <string name="beverages_title">Beverages</string>
    
    <!--  Navigation Strings -->
	<string-array name="menu_item_array">
        <item>Log ingredients</item>
        <item>Log from menu</item>
        <item>Daily report</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!--  End Navigation Strings -->

    <!--  Alphabet list view -->
    <string name="a_b_c">ABC</string>
    <string name="d_e_f">DEF</string>
    <string name="g_h_i">GHI</string>
    <string name="j_k_l">JKL</string>
    <string name="m_n_o">MNO</string>
    <string name="p_q_r_s">PQRS</string>
    <string name="t_u_v">TUV</string>
    <string name="w_x_y_z">WXYZ</string>
    
    <!--  Labels -->
    <string name="how_many_label">How %s?</string>
    <string name="reason_label">What\'s the reason for waste?</string>
    <string name="finish_logging_button">Finish logging</string>
    
    <string-array name="kilogram_choices">
        <item>Kg</item>
        <item>g</item>
    </string-array>
    
    <string-array name="litre_choices">
        <item>L</item>
        <item>ml</item>
    </string-array>
    
    <!-- Register/login -->
    <string name="register_text">Welcome to The Food Tree, please register</string>
    <string name="enter_name">Rebecca</string>
    <string name="enter_email">rebeccarich1@gmail.com</string>
    <string name="enter_password">Coca_Cola1</string>
</resources>
 